# asn1c-rrc-example

./: CMakeLists.txt  README.md  rrc-reconfig.c
asn1c/: CMakeLists.txt  nr-rrc-17.3.0.cmake
cmake/: macros.cmake
